reorder files and add extra functions for hard delete and recover
