# services/inventory-management/internal/model/model.go
@@ -51,9 +51,47 @@ type Supplier struct {
 }
 
 type ErrorResponse struct {
-	Message string `json:"message"`
+	Error string `json:"message"`
 }
 
 type SuccessResponse struct {
 	Message string `json:"message"`
+}
+
+type StockResponse struct {
+	ID          uint   `json:"id"`
+	ProductName string `json:"product_name"`
+	Quantity    int    `json:"quantity"`
+	Location    string `json:"location"`
+}
+
+type StocksResponse struct {
+	Message string          `json:"message"`
+	Stocks  []StockResponse `json:"stocks"`
+}
+
+type CategoryResponse struct {
+	ID       uint   `json:"id"`
+	Name     string `json:"name"`
+	ParentID *uint  `json:"parent_id"`
+}
+
+// CategoriesResponse represents the response for retrieving categories
+type CategoriesResponse struct {
+	Message    string             `json:"message"`
+	Categories []CategoryResponse `json:"categories"`
+}
+
+type SupplierResponse struct {
+	ID          uint   `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Email       string `json:"email"`
+	Contact     string `json:"contact"`
+}
+
+// SuppliersResponse represents the response for retrieving supplier items
+type SuppliersResponse struct {
+	Message   string             `json:"message"`
+	Suppliers []SupplierResponse `json:"suppliers"`
 }
